Estrutura html concluída

--- a/index.html
+++ b/index.html
@@ -42,5 +42,72 @@
         <a href="#">Linkedin</a>
     </div>
 </header>
+<main class="container-body">
+    <div class="card-container">
+        <div class="text-card ">
+            <p>
+                Considero o Github uma ferramenta indispensável, 
+                é uma oportunidade de demonstrar toda minha determinação e conhecimentos aplicado a projetos práticos.
+            </p>
+        </div>
+    <a href="https://github.com/viniciuspch">
+        <div class="card git">
+            <div class="card-content">
+                <h1>
+                    Github
+                </h1>
+                    <p>
+                        Veja meus projetos
+                    </p>
+            </div>
+        </div>    
+    </a>     
+    </div>
+    <div class="card-container">
+    <a href="https://www.linkedin.com/in/viniciuspch/">
+        <div class="card link">
+            <div class="card-content">
+                <h1>
+                    Linkedin
+                </h1>
+                <p>
+                    Acompanhe minha carreira
+                </p>
+            </div>
+        </div>
+    </a>
+        <div class="text-card">
+            <p>
+                No linkedin você pode acompanhar minha carreira e atribuições como, cursos, graduações, bootscamps e mais!
+            </p>
+        </div>
+    </div>
+    <div class="card-container" >
+        <div class="text-card">
+            <p>
+                Saiba mais do meu cotidiano de forma descontraída através do Instagram.
+            </p>
+        </div>
+    <a href="https://www.instagram.com/viniciusad_pacheco/">
+            <div class="card inst">
+                <div class="card-content">
+                    <h1>
+                        Instagram
+                    </h1>
+                    <p>
+                        Mais do meu dia a dia
+                    </p>
+                </div>
+            </div>
+    </a>
+    </div>    
+</main>
+<footer class="footer-wrapper">
+    <div class="text-footer">
+        <p>
+            Desenvolvido por <span>Vinicius Pacheco</span>
+        </p>
+    </div>
+</footer>
 </body>
 </html>
