Link redes sociais adicionado ao header

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </a>
         <div class="text-card">
             <p>
-                No linkedin você pode acompanhar minha carreira e atribuições como, cursos, graduações, bootscamps e mais!
+                No linkedin você pode acompanhar minha carreira e atribuições como, cursos, graduações, bootcamps e mais!
             </p>
         </div>
     </div>
